# opengeomorphometry-wc

./: README.md  open-geomorphometry.sln
FACET/: FACET.OPT  FACET.PLG  FacetParam.txt  facet.aps  facet.rc  facet.vcxproj  facet.vcxproj.filters
FACET/RES/: FACET.RC2
FACET/include/: DBFSTRUCTURE.H  FACET.H  FACETDLG.H  FACETPROCESS.H
FACET/source/: DBFSTRUCTURE.CPP  FACETPROCESS.CPP
FLOWMAPRWINVELEV/PROJECT_FILES/: .gitignore  LANDMAP.CLW  LANDMAP.NCB  LANDMAP.OPT  LANDMAP.PLG  LANDMAP.opensdf  ND.DBG  RCA00091  landmap.aps  landmap.rc  landmap.vcxproj  landmap.vcxproj.filters
FLOWMAPRWINVELEV/PROJECT_FILES/include/: SORT.H  SORTD.H  STDAFX.H  STRARRAY.H  VOLDFILE.H  landmapDlg.h
FLOWMAPRWINVELEV/PROJECT_FILES/source/: DBFFILE.CPP  DEMPROCESS.CPP  LANDMAP.CPP  STDAFX.CPP
FORM/: FORM.NCB  FORM.OPT  FORM.PLG  FORM.sln  FormParam.txt  form.aps  form.vcxproj  form.vcxproj.filters
FORM/include/: FORMDLG.H  FORMPROCESS.H  resource.h
FORM/source/: FORMDLG.CPP  FORMPROCESS.CPP  STDAFX.CPP
GridReadWriteUtility/: GridReadWriteUtility.aps  GridReadWriteUtility.clw  GridReadWriteUtility.ncb  GridReadWriteUtility.opt  GridReadWriteUtility.plg  GridReadWriteUtility.vcxproj  GridReadWriteUtility.vcxproj.filters
GridReadWriteUtility/include/: GridReadWriteUtilityDlg.h  StdAfx.h  resource.h
GridReadWriteUtility/source/: GridReadWriteUtility.cpp  GridReadWriteUtilityDlg.cpp  StdAfx.cpp
WEPPMAPR/PROJECT_FILES/: ND.DBG  Param.txt  WEPPMAPR.CLW  WEPPMAPR.NCB  WEPPMAPR.OPT  WEPPMAPR.PLG  WEPPMAPR.sdf  WEPPMAPR.sln  WeppMapr.aps  WeppMapr.vcxproj  WeppMapr.vcxproj.filters
WEPPMAPR/PROJECT_FILES/RES/: WEPPMAPR.RC2
WEPPMAPR/PROJECT_FILES/include/: WEPPMAPR.H  WEPPPROCESS.H
WEPPMAPR/PROJECT_FILES/source/: DBFFILE.CPP  WEPPMAPR.CPP  WEPPPROCESS.CPP
documents/: DEPENDENCIES  README
files/facet/: FACET.CLW  README.txt
files/facet/include/: DBFFile.h  resource.h  stdafx.h
files/facet/source/: DBFFile.cpp  Facet.cpp  FacetDLG.cpp  STDAFX.CPP  Sort.cpp
files/facet/vsprojfiles/: facet.vcxproj  facet.vcxproj.filters
files/facet/vsprojfiles/Debug/: RCa02076  RCa05384  RCa05988
files/flowmapr/: Config.txt  PARAM.txt
files/flowmapr/include/: DBFFile.h  DEMProcess.h  InterNNManager.h  InterNNThread.h  LandMap.h  LandmapManager.h  LandmapThread.h  ProgressBarDialog.h  ThreadManager.h  ThreadObject.h  VOLDFile.h  landmapProcess.h  landmapStructs.h  resource.h
files/flowmapr/include/DataFiles/: CSVReader.h  CSVWriter.h  DataReader.h  DataStructs.h  DataWriter.h  TXTReader.h  TXTWriter.h
files/flowmapr/include/Utility/: Logger.h  Settings.h  Sort.h  Util.h
files/flowmapr/res/: LandMap.rc2
files/flowmapr/source/: DEMProcess.cpp  InterNNManager.cpp  InterNNThread.cpp  LandMapDLG.cpp  LandmapManager.cpp  LandmapThread.cpp  ProgressBarDialog.cpp  STRArray.cpp  Sort.cpp  SortD.cpp  ThreadManager.cpp  VOLDFile.cpp  landmapProcess.cpp  main.cpp
files/flowmapr/source/DataFiles/: CSVReader.cpp  CSVWriter.cpp  TXTReader.cpp  TXTWriter.cpp
files/flowmapr/source/Utility/: Logger.cpp  Settings.cpp  Sort.cpp  Util.cpp
files/flowmapr/vsprojfiles/: flowmapr.vcxproj  flowmapr.vcxproj.filters
files/form/: Form.clw  README.TXT  form.rc
files/form/include/: DBFFile.h  Form.h  STDAFX.H
files/form/res/: form.rc2
files/form/source/: DBFFile.cpp  Form.cpp
files/form/vsprojfiles/: form.vcxproj  form.vcxproj.filters
files/grid/: GridReadWriteUtility.rc  ReadMe.txt
files/grid/include/: GridReadWriteUtility.h
files/grid/res/: GridReadWriteUtility.rc2
files/grid/source/: DBFFile.cpp
files/grid/vsprojfiles/: grid.vcxproj  grid.vcxproj.filters
files/open-geomorphometry/vsprojfiles/: open-geomorphometry.sdf  open-geomorphometry.vcxproj
files/shared/include/: ThreadManager.h
files/shared/include/DataFiles/: CSVReader.h  CSVWriter.h  DataReader.h  (+3 more)
files/weppmapr/: README.TXT  WeppMapr.rc
files/weppmapr/include/: DBFFile.h  STDAFX.H  Segs.h  WEPPMaprDLG.h  resource.h
files/weppmapr/source/: STDAFX.cpp  WEPPMaprDLG.cpp
files/weppmapr/vsprojfiles/: weppmapr.vcxproj  weppmapr.vcxproj.filters
open-geomorphometry/: open-geomorphometry.vcxproj
open-geomorphometry/Debug/: open-geomorphometry.lastbuildstate
project-files/VS2010/: open-geomorphometry.sln
project-files/cmake/: CMakeLists.txt  TestInSource.cmake
(+13 files in other folders)
